--- a/client/package.json
+++ b/client/package.json
@@ -2,19 +2,13 @@
   "name": "mern",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3002/",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "axios": "^0.20.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^8.2.0",
-    "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
