--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bulma": "^0.9.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-bulma-components": "^3.4.0",
+    "react-circular-progressbar": "^2.0.3",
     "validator": "^13.1.1"
   }
 }
