--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.1",
     "node-sass": "^4.14.1",
